--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,9 +1,11 @@
-name: GitHub-Profile-Summary-Cards
-
+name: Metrics
 on:
+  # Schedule daily updates
   schedule: [{cron: "0 0 * * *"}]
+  # (optional) Run workflow manually
   workflow_dispatch:
-
+  # (optional) Run workflow when pushing on master/main
+  push: {branches: ["master", "main"]}
 jobs:
   build:
     runs-on: ubuntu-latest
