--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,29 +15,34 @@ jobs:
       - uses: actions/checkout@v2
       - uses: lowlighter/metrics@latest
         with:
-          filename: metrics.plugin.achievements.compact.svg
+          filename: metrics.plugin.base.svg
           token: ${{ secrets.METRICS_TOKEN }}
-          plugin_achievements: yes
-          plugin_achievements_only: >-
-            polyglot, stargazer, sponsor, deployer, member, maintainer, developer,
-            scripter, packager, explorer, infographile, manager
-          plugin_achievements_display: compact
-          plugin_achievements_threshold: X
+          base_indepth: yes
+
       - uses: lowlighter/metrics@latest
         with:
-          filename: metrics.plugin.activity.svg
+          filename: metrics.plugin.languages.svg
           token: ${{ secrets.METRICS_TOKEN }}
           base: ""
-          plugin_activity: yes
-          plugin_activity_limit: 5
-          plugin_activity_days: 0
-          plugin_activity_filter: issue, pr, release, fork, review, ref/create
+          plugin_languages: yes
+          plugin_languages_indepth: yes
+
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics.plugin.isocalendar.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          base: ""
+          plugin_isocalendar: yes
+          plugin_isocalendar_duration: full-year
+
       - name: Indepth analysis
         uses: lowlighter/metrics@latest
         with:
-          filename: metrics.plugin.notable.indepth.svg
+          filename: metrics.plugin.notable.svg
           token: ${{ secrets.METRICS_TOKEN }}
           base: ""
           plugin_notable: yes
+          plugin_notable_from: all
+          plugin_notable_self: true
           plugin_notable_indepth: yes
           plugin_notable_repositories: yes
