--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,6 +26,10 @@ jobs:
           base: ""
           plugin_languages: yes
           plugin_languages_indepth: yes
+          plugin_languages_ignored: html,css
+          plugin_languages_details: lines, bytes-size, percentage
+          plugin_languages_recent_days: 365
+          plugin_languages_threshold: yes
 
       - uses: lowlighter/metrics@latest
         with:
