--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,19 +18,6 @@ jobs:
           filename: metrics.plugin.base.svg
           token: ${{ secrets.METRICS_TOKEN }}
           base_indepth: yes
-
-      - uses: lowlighter/metrics@latest
-        with:
-          filename: metrics.plugin.languages.svg
-          token: ${{ secrets.METRICS_TOKEN }}
-          base: ""
-          plugin_languages: yes
-          plugin_languages_indepth: yes
-          plugin_languages_ignored: html,css
-          plugin_languages_details: lines, bytes-size, percentage
-          plugin_languages_recent_days: 365
-          plugin_languages_threshold: yes
-
       - uses: lowlighter/metrics@latest
         with:
           filename: metrics.plugin.isocalendar.svg
@@ -42,11 +29,8 @@ jobs:
       - name: Indepth analysis
         uses: lowlighter/metrics@latest
         with:
-          filename: metrics.plugin.notable.svg
+          filename: metrics.plugin.starlists.svg
           token: ${{ secrets.METRICS_TOKEN }}
           base: ""
-          plugin_notable: yes
-          plugin_notable_from: all
-          plugin_notable_self: true
-          plugin_notable_indepth: yes
-          plugin_notable_repositories: yes
+          plugin_starlists: yes
+          plugin_starlists_limit: 5
